--- a/bienesraices_inicio/src/scss/app.scss
+++ b/bienesraices_inicio/src/scss/app.scss
@@ -3,3 +3,13 @@
 @import 'base/mixins';
 @import 'base/globales';
 @import 'base/utilidades';
+@import 'base/botones';
+
+@import "layout/footer";
+@import "layout/header";
+@import "layout/navegacion";
+@import "layout/iconos";
+@import "layout/anuncios";
+@import "layout/contactar";
+@import "layout/inferior";
+@import "layout/testimoniales";
