--- a/bienesraices_inicio/src/scss/base/_normalize.scss
+++ b/bienesraices_inicio/src/scss/base/_normalize.scss
@@ -188,6 +188,7 @@
   [type="button"],
   [type="reset"],
   [type="submit"] {
+    appearance: button;
     -webkit-appearance: button;
   }
   
@@ -280,6 +281,7 @@
    */
   
   [type="search"] {
+    appearance: textfield;
     -webkit-appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
   }
