Blog, Anuncios, Nosotros Fin

--- a/bienesraices_inicio/src/scss/app.scss
+++ b/bienesraices_inicio/src/scss/app.scss
@@ -4,7 +4,7 @@
 @import 'base/globales';
 @import 'base/utilidades';
 @import 'base/botones';
-
+//UI
 @import "layout/footer";
 @import "layout/header";
 @import "layout/navegacion";
@@ -13,3 +13,7 @@
 @import "layout/contactar";
 @import "layout/inferior";
 @import "layout/testimoniales";
+
+//Internas
+
+@import "internas/nosotros";
