--- a/bienesraices_inicio/src/scss/layout/_inferior.scss
+++ b/bienesraices_inicio/src/scss/layout/_inferior.scss
@@ -16,6 +16,11 @@
         margin-bottom: 0;
     }
 }
+.informacion-meta{
+    span{
+        color: $amarillo;
+    }
+}
 .texto-entrada{
     a{
         color: $negro;
@@ -36,8 +41,5 @@
             background-color: $verde;
             margin-top: 1rem;
         }
-    }
-    span{
-        color: $amarillo;
     }
 }
