--- a/bienesraices_inicio/src/scss/layout/_anuncios.scss
+++ b/bienesraices_inicio/src/scss/layout/_anuncios.scss
@@ -1,10 +1,12 @@
 @include tablet{
     .contenedor-anuncios{
         @include grid(3,2rem);
+        gap: 2rem;
     }
 }
 
 .anuncio{
+    margin-bottom: 2rem;
     background-color: lighten($gris,5);
     border: 1px solid darken($gris,10);
 
@@ -16,17 +18,18 @@
     h3,p{
         margin: 0;
     }
-    .precio{
-        color: $verde;
-        font-weight: $bold;
-        font-size: 3rem;
-    }
-}
 
+}
+.precio{
+    color: $verde;
+    font-weight: $bold;
+    font-size: 3rem;
+}
 .iconos-caracteristicas{
     display: flex;
     list-style:none;
     padding: 0;
+    max-width: 40rem;
 
     li{
         flex: 1;
