--- a/bienesraices_inicio/src/scss/app.scss
+++ b/bienesraices_inicio/src/scss/app.scss
@@ -4,6 +4,7 @@
 @import 'base/globales';
 @import 'base/utilidades';
 @import 'base/botones';
+@import "base/darkMode";
 //UI
 @import "layout/footer";
 @import "layout/header";
@@ -13,6 +14,7 @@
 @import "layout/contactar";
 @import "layout/inferior";
 @import "layout/testimoniales";
+@import "layout/formulario";
 
 //Internas
 
