--- a/bienesraices_inicio/src/scss/layout/_footer.scss
+++ b/bienesraices_inicio/src/scss/layout/_footer.scss
@@ -5,7 +5,11 @@
     .contenedor-footer{
         padding-top: $separacion / 2;
     }
-
+    .navegacion{
+        visibility: visible;
+        opacity: 1;
+        height: auto;
+    }
     .copyright{
         color: $blanco;
         text-align: center;
