--- a/bienesraices_inicio/src/scss/layout/_navegacion.scss
+++ b/bienesraices_inicio/src/scss/layout/_navegacion.scss
@@ -1,17 +1,50 @@
+.derecha{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  @include tablet{
+    align-items: flex-end;
+  }
+  .dark-mode-boton{
+    width: 3rem;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    filter: invert(100%);
+    
+    &:hover{
+      cursor: pointer;
+    }
+
+    @include tablet{
+      margin-top: 0;
+    }
+  }
+}
+
 .barra {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-top: 3rem;
   @include tablet {
+    align-items: flex-end;
     flex-direction: row;
     justify-content: space-between;
   }
 }
 
 .navegacion {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility .3s ease-in-out, opacity 0.5s linear, height 0.5s linear;
+  height: 0;
+
   @include tablet {
     display: flex;
     align-items: center;
+    opacity: 1 ;
+    visibility: visible;
   }
   a {
     color: $blanco;
@@ -27,4 +60,19 @@
         }
     }
   }
+}
+
+.mobile-menu{
+  @include tablet{
+    display: none;
+  }
+  img{
+    width: 5rem;
+  }
+}
+
+.mostrar{
+ visibility: visible;
+ opacity: 1;
+ height: auto;
 }
